--- a/front-end/desafio-frontend-modulo1-t06/home/index.html
+++ b/front-end/desafio-frontend-modulo1-t06/home/index.html
@@ -15,22 +15,21 @@
     <title>Document</title>
 </head>
 
-<header>
-    <div>   
-        <img src="../../assets/logo-dark.svg" alt="">
-    </div>
-    <div>
-        <a class="btnLink" href="#">HOME</a>
-        <a class="btnLink" href="#">PORTFOLIO</a>
-        <a class="btnLink" href="#">CONTATO</a>
-    </div>
-
-</header>
-
 <body>
+    <header>
+        <div>   
+            <img src="../assets/logo-dark.svg" alt="">
+        </div>
+        <div>
+            <a class="btnLink" href="#">HOME</a>
+            <a class="btnLink" href="#">PORTFOLIO</a>
+            <a class="btnLink" href="#">CONTATO</a>
+        </div>
+    
+    </header>
     <!-- Hero Section -->
     <div class="homepage-hero">
-        <img src="/front-end/desafio-frontend-modulo1-t06/assets/home/image-homepage-hero.jpg" alt="">
+        <img src="../assets/home/image-homepage-hero.jpg" alt="">
     </div>
     <div class="homepage-hero-box">
             <div class="box">
@@ -41,7 +40,7 @@
                 websites lindos</h1>
             </div>
             <div class="btn-box">
-                <img src="/front-end/desafio-frontend-modulo1-t06/assets/icons/down-arrows.svg" alt="">
+                <img src="../assets/icons/down-arrows.svg" alt="">
                 <a>SOBRE MIM</a>
             </div>
 
@@ -50,7 +49,7 @@
     <!-- Sobre Section -->
     <div class="homepage-profile">
         <div class="foto-perfil">
-            <img src="/front-end/desafio-frontend-modulo1-t06/assets/home/image-homepage-profile.jpg" alt="">
+            <img src="../assets/home/image-homepage-profile.jpg" alt="">
         </div>
 
         <div class="texto">
@@ -82,22 +81,22 @@
             <a href="#">CONTATO</a>
         </div>
         
-    </div>       
+    </div> 
+    <footer>
+        <div>   
+            <img src="../assets/logo-light.svg" alt="">
+        </div>
+        <div>
+            <a class="txtfooter" href="">HOME</a>
+            <a class="txtfooter" href="">PORTFOLIO</a>
+            <a class="txtfooter" href="">CONTATO</a>
+        </div>
+        <div id="divImgFooter">
+            <a class="imgfooter" href=""> <img class="imgfooter" src=" ../assets/icons/github-light.svg" alt=""></a>
+            <a class="imgfooter" href=""> <img class="imgfooter" src="../assets/icons/twitter-light.svg" alt=""></a>
+            <a class="imgfooter" href=""> <img class="imgfooter" src="../assets/icons/linkedin-light.svg" alt=""></a>
+        </div>
+    </footer>      
 </body>
-<footer>
-    <div>   
-        <img src="../../assets/logo-light.svg" alt="">
-    </div>
-    <div>
-        <a class="txtfooter" href="">HOME</a>
-        <a class="txtfooter" href="">PORTFOLIO</a>
-        <a class="txtfooter" href="">CONTATO</a>
-    </div>
-    <div id="piu">
-        <a class="imgfooter" href=""> <img class="imgfooter" src="../../assets/icons/github-light.svg" alt=""></a>
-        <a class="imgfooter" href=""> <img class="imgfooter" src="../../assets/icons/twitter-light.svg" alt=""></a>
-        <a class="imgfooter" href=""> <img class="imgfooter" src="../../assets/icons/linkedin-light.svg" alt=""></a>
 
-    </div>
-</footer>
 </html>
