--- a/front-end/desafio-frontend-modulo1-t06/home/index.html
+++ b/front-end/desafio-frontend-modulo1-t06/home/index.html
@@ -56,7 +56,7 @@
             <img src="../assets/home/image-homepage-profile.jpg" alt="">
         </div>
         <div class="texto">
-                <div class="linha"></div>
+                <div class="linhaCima"></div>
                     <h1>
                         Sobre mim
                     </h1>
@@ -77,11 +77,11 @@
       
                 <div class="btnn">
                     <a href="#">
-                        R PARA O PORTFOLIO
+                        PARA O PORTFOLIO
                     </a>.
                 </div>
 
-                <div class="linhaa"></div>
+                <div class="linhaBaixo"></div>
             </div>
         </div>
     </div>
@@ -107,9 +107,9 @@
             <img src="../assets/logo-light.svg" alt="">
         </div>
         <div>
-            <a class="txtfooter" href="">HOME</a>
-            <a class="txtfooter" href="">PORTFOLIO</a>
-            <a class="txtfooter" href="">CONTATO</a>
+            <a class="txtfooter" href="#">HOME</a>
+            <a class="txtfooter" href="#">PORTFOLIO</a>
+            <a class="txtfooter" href="#">CONTATO</a>
         </div>
         <div id="divImgFooter">
             <a class="imgfooter" href=""> <img class="imgfooter" src=" ../assets/icons/github-light.svg" alt=""></a>
