--- a/front-end/desafio-frontend-modulo1-t06/home/index.html
+++ b/front-end/desafio-frontend-modulo1-t06/home/index.html
@@ -42,8 +42,8 @@
                 </h1>
             </div>
             <div class="btn-box">
-                <img src="../assets/icons/down-arrows.svg" alt="">
-                <a>
+                <img src="../assets/icons/down-arrows.svg" alt="arrow donw">
+                <a href="#">
                     SOBRE MIM
                 </a>
             </div>
@@ -78,7 +78,7 @@
                 <div class="btnn">
                     <a href="#">
                         PARA O PORTFOLIO
-                    </a>.
+                    </a>
                 </div>
 
                 <div class="linhaBaixo"></div>
@@ -112,9 +112,17 @@
             <a class="txtfooter" href="#">CONTATO</a>
         </div>
         <div id="divImgFooter">
-            <a class="imgfooter" href=""> <img class="imgfooter" src=" ../assets/icons/github-light.svg" alt=""></a>
-            <a class="imgfooter" href=""> <img class="imgfooter" src="../assets/icons/twitter-light.svg" alt=""></a>
-            <a class="imgfooter" href=""> <img class="imgfooter" src="../assets/icons/linkedin-light.svg" alt=""></a>
+            <a target="_blank" class="imgfooter" href="https://github.com/K4binho/Desafio1-parteObrigatoria-FrontEnd"> 
+                <img class="imgfooter" src=" ../assets/icons/github-light.svg" alt="LINK GITHUB">
+            </a>
+
+            <a target="_blank" class="imgfooter" href="">
+                 <img class="imgfooter" src="../assets/icons/twitter-light.svg" alt="LINK TWITTER">
+            </a>
+
+            <a target="_blank" class="imgfooter" href="https://www.linkedin.com/in/matheus-heinrique-888312182/"> 
+                <img class="imgfooter" src="../assets/icons/linkedin-light.svg" alt="LINK LINKEDIN">
+            </a>
         </div>
     </footer>      
 </body>
