CSS GLOBAL CORRIGIDO

--- a/front-end/desafio-frontend-modulo1-t06/home/index.html
+++ b/front-end/desafio-frontend-modulo1-t06/home/index.html
@@ -110,14 +110,14 @@
         <div>
             <a class="txtfooter" href="#">HOME</a>
             <a class="txtfooter" href="#">PORTFOLIO</a>
-            <a class="txtfooter" href="#">CONTATO</a>
+            <a class="txtfooter i" href="#">CONTATO</a>
         </div>
         <div id="divImgFooter">
             <a target="_blank" class="imgfooter" href="https://github.com/K4binho/Desafio1-parteObrigatoria-FrontEnd"> 
                 <img class="imgfooter" src=" ../assets/icons/github-light.svg" alt="LINK GITHUB">
             </a>
 
-            <a target="_blank" class="imgfooter" href="">
+            <a target="_blank" class="imgfooter" href="https://beacons.ai/m_heinrique">
                  <img class="imgfooter" src="../assets/icons/twitter-light.svg" alt="LINK TWITTER">
             </a>
 
