--- a/front-end/desafio-frontend-modulo1-t06/home/index.html
+++ b/front-end/desafio-frontend-modulo1-t06/home/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="btn-box">
                 <img src="../assets/icons/down-arrows.svg" alt="arrow donw">
-                <a href="#">
+                <a href="#" class="btnComProblema">
                     SOBRE MIM
                 </a>
             </div>
